fix broken drawer layout on mobile
Former-commit-id: b8bb1256dca7eb9c7bbd56385e817f69af9fbee7

--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -335,7 +335,7 @@ h3 blockquote {
 	}
 }
 .drawer {
-	width: 80%;
+	//width: 80%;
 	position: fixed;
 	left: 0;
 	top: 0;
